# learning_langchain

./: .gitignore  README.md  git_commands.md  launch copy.json  pyproject.toml  requirements.txt
src/genai_with_gemini/: chatbot.py  hello_gemini.py  hello_gemini_chatbot.py  hello_gemini_langchain.ipynb  hello_gemini_langchain.py  hello_gemini_streamlit.py  langchain_tutorial.ipynb  restaurants.py
src/genai_with_gemini/langchain_tutorial/: 01_chat_models_and_prompts.py  02_semantic_search_engine.py  03_classify_text_into_labels.py  04_extraction_chain.py  Readme.md  rag1.py
src/langchain_masterclass_brandon/: README.md
src/langchain_masterclass_brandon/01_ChatModels/: 1_chat_model_basic.py  2_chat_model_basic_conversation.py  3_chat_model_alternatives.py  4_chat_model_conversation_with_user.py  5_chat_model_save_messages_history_firebase.py
src/langchain_masterclass_brandon/02_Prompt_Templates/: 1_prompt_template_basic.py  2_prompt_template_with_chatmodels.py
src/langchain_masterclass_brandon/03_chains/: 1_chain_basics.py  2_chains_under_the_hood.py  3_chains_extended.py  4_chains_parallel.py  5_chains_branching.py
src/langchain_masterclass_brandon/04_rag/: 1a_rag_basics.py  1b_rag_basics.py  2a_rag_basics_metadata.py  2b_rag_basics_metadata.py  3_text_splitting_deep_dive.py  4_embeddings_deep_dive.py
src/langchain_masterclass_brandon/utils/: __init__.py  (+1 more)
src/langchain_tutorial/: 01_chat_models_and_prompts.py  01_hello_langchain.py  02_prompt_templates.py  03_semantic_search.py  04_classification.py  05_extraction.py  06_RAG_1.py  06_RAG_2.py
(+17 files in other folders)
