[project]
name = "learning-langchain"
version = "0.1.0"
description = "Learning the LangChain framework from various sources"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.63.0",
    "beautifulsoup4>=4.13.4",
    "bs4>=0.0.2",
    "chromadb>=1.0.16",
    "faiss-cpu>=1.12.0",
    "firecrawl-py>=2.16.5",
    "firestore>=0.0.8",
    "google-generativeai>=0.8.5",
    "huggingface-hub>=0.34.4",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.18",
    "langchain-community>=0.3.27",
    "langchain-google-firestore>=0.5.0",
    "langchain-google-genai>=2.0.10",
    "langchain-groq>=0.3.7",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.30",
    "langchain-tavily>=0.2.11",
    "langchainhub>=0.1.21",
    "openai>=1.99.9",
    "psycopg2>=2.9.10",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.48.0",
    "tiktoken>=0.11.0",
    "transformers>=4.55.1",
    "uvicorn>=0.35.0",
    "wikipedia>=1.4.0",
    "yfinance>=0.2.65",
]
